--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "备忘录",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --devtool eval-source-map --progress --hot",
+    "start": "webpack-dev-server --progress --hot --history-api-fallback --devtool eval-source-map ",
     "build": "webpack --config webpack.production.config.js -p"
   },
   "author": "tanjizhen",
@@ -49,6 +49,7 @@
     "less-loader": "^4.0.3",
     "lodash": "^4.17.4",
     "open-browser-webpack-plugin": "^0.0.5",
+    "path": "^0.12.7",
     "path-to-regexp": "^2.0.0",
     "postcss-loader": "^2.0.5",
     "qs": "^6.5.0",
