--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "homepage": "http://damonare.cn/memos",
   "dependencies": {
     "antd": "^2.9.3",
+    "bundle-loader": "^0.5.6",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "requirejs": "^2.3.3"
